# agentic-contract

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.github/workflows/: canonical-sister-guardrails.yml  ci.yml  install-command-guardrails.yml  primary-problem-regression.yml  release.yml  runtime-hardening-guardrails.yml
crates/agentic-contract/: Cargo.toml
crates/agentic-contract-cli/: Cargo.toml
crates/agentic-contract-cli/src/: main.rs
crates/agentic-contract-cli/src/commands/: approval.rs  limit.rs  mod.rs  obligation.rs  policy.rs  violation.rs
crates/agentic-contract-cli/tests/: cli_integration.rs
crates/agentic-contract-ffi/: Cargo.toml
crates/agentic-contract-ffi/include/: agentic_contract.h
crates/agentic-contract-ffi/src/: lib.rs
crates/agentic-contract-mcp/: Cargo.toml
crates/agentic-contract-mcp/src/: ghost_bridge.rs  greeting.rs  invention_generation.rs  invention_governance.rs  invention_resilience.rs  invention_visibility.rs  lib.rs  main.rs  prompts.rs  resources.rs  server.rs  stdio.rs  tools.rs
crates/agentic-contract-mcp/tests/: edge_cases_inventions.rs  phase1_mcp_stress.rs  phase3_server_stress.rs
crates/agentic-contract/benches/: contract_benchmarks.rs
crates/agentic-contract/src/: approval.rs  bridges.rs  condition.rs  contract_engine.rs  contracts.rs  error.rs  file_format.rs  inventions.rs  lib.rs  obligation.rs  policy.rs  risk_limit.rs  violation.rs
crates/agentic-contract/src/query/: budget.rs  delta.rs  intent.rs  mod.rs  pagination.rs
crates/agentic-contract/tests/: conservation_test.rs  phase2_engine_inventions.rs  stress_and_edge_cases.rs
docs/public/: api-reference.md  architecture.md  benchmarks.md  cli-reference.md  command-surface.md  concepts.md  configuration.md  experience-with-vs-without.md  faq.md  ffi-reference.md  file-format.md  initial-problem-coverage.md  installation.md  integration-guide.md  mcp-prompts.md  mcp-resources.md  mcp-tools.md  overview.md  playbooks-agent-integration.md  primary-problem-coverage.md  quickstart.md  runtime-install-sync.md  sister.manifest.json  troubleshooting.md
npm/wasm/: Cargo.toml
npm/wasm/src/: lib.rs
paper/paper-i-policy-engine/: agenticcontract-paper.aux  agenticcontract-paper.bbl  agenticcontract-paper.blg  agenticcontract-paper.out  agenticcontract-paper.tex  agenticcontract-references.bib
planning-docs/: AGENTIC-CONTRACT-SPECS-PART2.md  AGENTIC-CONTRACT-SPECS.md
python/: .coverage  pyproject.toml
python/src/agentic_contract/: __init__.py
python/tests/: test_contract_engine.py
scripts/: check-canonical-sister.sh  check-install-commands.sh  check-runtime-hardening.sh  install.sh  publish.sh  test-primary-problems.sh
tests/integration/: cli_tests.rs
