[package]
name = "agentic-contract-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "FFI bindings for AgenticContract"
keywords = ["ffi", "contract", "ai", "agent", "bindings"]
categories = ["api-bindings"]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
agentic-contract = { workspace = true }
serde_json = { workspace = true }
libc = "0.2"
