[package]
name = "agentic-contract-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for AgenticContract"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
agentic-contract = { path = "../../crates/agentic-contract" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]
